@@ -1,0 +1,54 @@
+/*
+ *  Copyright (C) 2021 Thomas Maier-Komor
+ *
+ *  This source file belongs to Wire-Format-Compiler.
+ *
+ *  This program is free software: you can redistribute it and/or modify
+ *  it under the terms of the GNU General Public License as published by
+ *  the Free Software Foundation, either version 3 of the License, or
+ *  (at your option) any later version.
+ *
+ *  This program is distributed in the hope that it will be useful,
+ *  but WITHOUT ANY WARRANTY; without even the implied warranty of
+ *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ *  GNU General Public License for more details.
+ *
+ *  You should have received a copy of the GNU General Public License
+ *  along with this program.  If not, see <http://www.gnu.org/licenses/>.
+ */
+
+
+/* wfc-template:
+ * function: decode_bytes
+ */
+template <typename S>
+int decode_bytes(S &s, const uint8_t *a, const uint8_t *e)
+{
+	varint_t v;
+	int n = read_varint(a,e-a,&v);
+	a += n;
+	if ((n <= 0) || ((a+v) > e))
+		return -1;
+	s.assign((const char *)a,v);
+	return n+v;
+}
+
+
+
+/* wfc-template:
+ * function: decode_bytes_element
+ */
+template <typename V>
+int decode_bytes_element(V &s, const uint8_t *a, const uint8_t *e)
+{
+	varint_t v;
+	int n = read_varint(a,e-a,&v);
+	a += n;
+	if ((n <= 0) || ((a+v) > e))
+		return -1;
+	s.emplace_back((const char *)a,v);
+	return n+v;
+}
+
+
+
