@@ -1,0 +1,41 @@
+/*
+ *  Copyright (C) 2021 Thomas Maier-Komor
+ *
+ *  This source file belongs to Wire-Format-Compiler.
+ *
+ *  This program is free software: you can redistribute it and/or modify
+ *  it under the terms of the GNU General Public License as published by
+ *  the Free Software Foundation, either version 3 of the License, or
+ *  (at your option) any later version.
+ *
+ *  This program is distributed in the hope that it will be useful,
+ *  but WITHOUT ANY WARRANTY; without even the implied warranty of
+ *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ *  GNU General Public License for more details.
+ *
+ *  You should have received a copy of the GNU General Public License
+ *  along with this program.  If not, see <http://www.gnu.org/licenses/>.
+ */
+
+
+
+/* wfc-template:
+ * function: encode_bytes
+ * requires: write_varint
+ * sysinclude: vector
+ * sysinclude: string.h
+ */
+template<typename S>
+int encode_bytes(const S &s, uint8_t *a, uint8_t *e)
+{
+	ssize_t l = s.size();
+	int n = write_varint(a,e-a,l);
+	a += n;
+	if ((n <= 0) || ((e-a) < l))
+		return -1;
+	memcpy(a,s.data(),l);
+	return l + n;
+}
+
+
+
